// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components FormattedVal renders a fiat 1`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE eAhrPH"
  color="#66be54"
>
  20.00
</span>
`;

exports[`components FormattedVal renders a formatted val 1`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE eAhrPH"
  color="#66be54"
>
  4
</span>
`;

exports[`components FormattedVal renders a percent 1`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE eAhrPH"
  color="#66be54"
>
  30 %
</span>
`;

exports[`components FormattedVal shows code 1`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE eAhrPH"
  color="#66be54"
>
  BTC 4
</span>
`;

exports[`components FormattedVal shows sign 1`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE eAhrPH"
  color="#66be54"
>
  + 4
</span>
`;

exports[`components FormattedVal shows sign 2`] = `
<span
  className="FormattedVal__T-fevxLy hYRXSf Text-bUpXnE fjJBpt"
  color="#fa4352"
>
  - 4
</span>
`;
